Updated to pull static features