@@ -60,9 +60,14 @@ public class MageServerGetRequests {
 		DefaultHttpClient httpclient = HttpClientManager.getInstance(context).getHttpClient();
 		HttpEntity entity = null;
 		try {
-			URL serverURL = new URL(PreferenceHelper.getInstance(context).getValue(R.string.serverURLKey));
-
-			HttpGet get = new HttpGet(new URL(serverURL, "api/layers").toURI());
+		    Uri uri = Uri.parse(PreferenceHelper.getInstance(context).getValue(R.string.serverURLKey))
+		        .buildUpon()
+		        .appendPath("api")
+		        .appendPath("layers")
+		        .appendQueryParameter("type", "External")
+		        .build();
+		    
+			HttpGet get = new HttpGet(new URI(uri.toString()));
 			HttpResponse response = httpclient.execute(get);
 			if (response.getStatusLine().getStatusCode() == HttpStatus.SC_OK) {
 				entity = response.getEntity();
